--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ComfyUI-qwen-image-size-picker"
-description = "A universal node for generating empty latent tensors with support for Qwen Image, SDXL and Flux models. Features extended aspect ratio support, batch processing, and flexible dimension overrides."
-version = "1.0.1"
+description = "A universal node for generating empty latent tensors with support for Qwen Image, Z-Image, SDXL and Flux models. Features extended aspect ratio support, batch processing, and flexible dimension overrides."
+version = "1.0.2"
 license = "MIT"
 
 [project.urls]
